force-app/main/default/objects/LLC_BI__Document_Collection__c/LLC_BI__Document_Collection__c.object-meta.xml
<CustomObject>
    <label>Document Collection</label>
    <nameField>
        <displayFormat>DC-{0000000000}</displayFormat>
        <label>Document Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>