force-app/main/default/objects/LLC_BI__Document_Collection__c/fields/LLC_BI__External_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Transaction_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is not required. Indicates transaction Id used by middleware.</description>
    <externalId>true</externalId>
    <label>External Transaction Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>