force-app/main/default/objects/LLC_BI__Document_Collection__c/fields/LLC_BI__Vendor_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Vendor_Collection_Id__c</fullName>
    <description>This field is not required. Identifier used by external vendor. For example, E-Signature document Id.</description>
    <externalId>true</externalId>
    <label>External Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>